--- a/example2_pathfinding_ortools.ipynb
+++ b/example2_pathfinding_ortools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f67ec5f7-ac7d-4981-b68f-ea2a5db68148",
    "metadata": {},
    "outputs": [],
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "69f3d1d4-1d82-4ee0-86e8-7430af74aada",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare and use the biggest component\n",
     "verbose=False\n",
-    "filename=\"graph_genome\"\n",
+    "filename=\"output/graph_genome\"\n",
     "path=\"input/spneumoniae_k_121.unitigs.fa\"\n",
     "G = generate_de_bruijn_graph_from_fa(path,verbose)\n",
     "save_graph_to_html(G,filename+\"_de-Bruijn\")\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "62fc1102-a6d6-4a62-ab39-cc84c54793f3",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "a9c39fe8-25f6-49ba-9ff1-ea356af81789",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "c804289c-7ed7-48fa-9a4d-78f4fb72692b",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "9a679acd-97b6-4c25-bbcb-41ce65af62ad",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "240"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "c5c7eb81",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "60fae838",
    "metadata": {},
    "outputs": [],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "5207e370",
    "metadata": {},
    "outputs": [],
@@ -378,12 +378,12 @@
     "        net.add_edge(edge[0], edge[1], color=\"#84B8D9\")\n",
     " # Optional: show physics options in the browser\n",
     "net.show_buttons(filter_=['physics'])\n",
-    "net.write_html('graph_genom_longest_path.html')"
+    "net.write_html('output/graph_genom_longest_path.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "b2a400d1-a5df-43c6-b25a-635cb13575c4",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
     "for edge in GLP.edges():\n",
     "    net.add_edge(edge[0], edge[1], color=\"red\")   \n",
     "\n",
-    "net.write_html('graph_genom_longest_path_new.html')"
+    "net.write_html('output/graph_genom_longest_path_new.html')"
    ]
   },
   {
